 BUG: [ 1447851 ] Not enough space for version info in new splash screen
  Src: Splash.cpp
 PaTCH: [ 1445377 ] WinMerge Logos (72 DPI)
  Submitted by Alexander Skinner
  Add new folder Docs/Logos
  New Docs/Logos files: readme.txt WinMerge_logo_24bit.png
   WinMerge_logo_shadow_24bit.png WinMerge_logo_shadow_trans.tif
   WinMerge_logo_trans.gif

2006-03-11 Takashi
 BUG:  [ 1441389 ] Comparing root directory - mysterious
  Src: DiffWrapper.cpp

2006-03-11 Perry
 PATCH:  [ 1447539 ] Add explanatory comment to CCrystalTextBuffer::MoveLine
  Src/editlib: ccrystaltextbuffer.cpp
 PATCH: [ 1447547 ] Add more comments to CMergeDoc::PrimeTextBuffers
  Src: MergeDoc.cpp

2006-03-10 Kimmo
 Remove unneeded splash image (Splash2.bmp) as noted in Patch item #1441392
  Src/res removed file: Splash2.bmp

2006-03-10 Perry
 PATCH: [ 1445434 ] SyntaxColors scrambling reg values
  Src: SyntaxColors.cpp
  
2006-03-10 WinMerge experimental release 2.5.3.4 (cvs)

2006-03-09 Kimmo
 PATCH: [ 1445996 ] Fix wrong PgDown scrolling after mousescroll
  Src/editlib: ccrystaltextview2.cpp
 BUG: [ 1446648 ] cvs trunk doesn't compile
  Src: Splash.cpp

2006-03-08 Kimmo
 PATCH: [ 1441392 ] New Splash Screen
  Submitted by Alexander Skinner
  Src: Splash.cpp
  Src/res: splash1.bmp

2006-03-08 Perry
 Update MakeResDll readme with current information (MSVC.Net 2003 works
  now), and better explanation of how to pick a specific version.
  MakeResDll: readme.txt
 PATCH: [ 1443391 ] Update MakeResDll for VS.NET 2005
  MakeResDll: MakeResDll.cpp MakeResDll.dsp MakeResDll.rc
   StdAfx.cpp StdAfx.h readme.txt resource.h
  New MakeResDll: Merge.ico VsVersionDlg.cpp VsVersionDlg.h
 Bump MakeResDll version from 1.0.6.0 to 1.0.7.0.
  MakeResDll: MakeResDll.rc
 PATCH: [ 1442844 ] Make GetFileExt easier to understand
  Src: MergeDoc.cpp MergeDoc.h
 Add two minor comments to PropRegistry.
  PropRegistry.cpp

2006-03-06 WinMerge experimental release 2.5.3.3 (cvs)

2006-03-06 Perry