@@ -15,6 +15,8 @@ Add new items to top.
   New Docs/Logos files: readme.txt WinMerge_logo_24bit.png
    WinMerge_logo_shadow_24bit.png WinMerge_logo_shadow_trans.tif
    WinMerge_logo_trans.gif
+ Change Splashscreen text to according to Dean's wish
+  Src: Splash.cpp
 
 2006-03-11 Takashi
  BUG:  [ 1441389 ] Comparing root directory - mysterious
